crates/diffguard-domain/tests/snapshots/snapshot_tests_work_8526ea59__evaluate_multiple_rules_same_line.snap
---
source: crates/diffguard-domain/tests/snapshot_tests_work_8526ea59.rs
expression: snapshot
---
=== Evaluation ===
findings_count: 2
truncated_findings: 0
files_scanned: 1
lines_scanned: 1

=== Counts ===
info: 0, warn: 1, error: 1, suppressed: 0

=== Findings ===
- rule_id: rule1, severity: Error, message: found: abc, path: test.txt, line: 1, column: Some(1), match_text: "abc", snippet: "abcdef"
- rule_id: rule2, severity: Warn, message: found: def, path: test.txt, line: 1, column: Some(4), match_text: "def", snippet: "abcdef"

=== Rule Hits ===
- rule_id: rule1, total: 1, emitted: 1, suppressed: 0, info: 0, warn: 0, error: 1
- rule_id: rule2, total: 1, emitted: 1, suppressed: 0, info: 0, warn: 1, error: 0
