crates/diffguard-domain/tests/snapshots/snapshot_tests_work_8526ea59__evaluate_no_matches.snap
---
source: crates/diffguard-domain/tests/snapshot_tests_work_8526ea59.rs
expression: snapshot
---
=== Evaluation ===
findings_count: 0
truncated_findings: 0
files_scanned: 1
lines_scanned: 1

=== Counts ===
info: 0, warn: 0, error: 0, suppressed: 0

=== Findings ===


=== Rule Hits ===
